# freetype

./: meson.build
builds/unix/: ftconfig.meson.in
src/: meson.build
src/base/: meson.build
src/psaux/: meson.build
src/psnames/: meson.build
src/raster/: meson.build
src/truetype/: meson.build
